test/classes/subclasses/qualified-inherit.nodyno.good
qualified-inherit.chpl:7: error: only simple inheritance expressions are supported without Dyno scope resolution
