test/classes/subclasses/qualified-inherit.compopts
                        # qualified-inherit.dyno.good
--no-dyno-scope-resolve # qualified-inherit.nodyno.good
